Platform 1.18

* Bootstrap

  We added a new @AcceptRequests annotation for methods that start accepting
  requests into the application. The methods will be invoked after all
  @PostConstruct methods have been invoked. Upon shutdown, any @PreDestroy
  methods in the class will be invoked before those in non-@AcceptRequests
  classes.

* Reporting

  We now report upon startup a ReportCollector.ServerStart metric with a value
  of 1. This may be used to track server restarts.

* Library Upgrades

  - Jersey to 2.17
  - logback to 1.1.3

Platform 1.17

* Maven 3.2.3 required

  We increased the minimum version of Maven to 3.2.3.

* Deprecated APIs removed

  - AsyncHttpClient
  - BalancingAsyncHttpClient

* Deprecations

  - HttpClientAsyncBindingBuilder has been deprecated. Use
    HttpClientBindingBuilder instead.
  - AsyncHttpClientModule has been deprecated. Use HttpClientModule instead.

* Packaging

  maven-assembly-plugin is now configured to generate Posix tar files instead
  of Gnu tar files.

* [Bug] Report correct values for the HttpClient WrittenBytes metrics.

* Library Upgrades

  - Jetty to 9.2.10

Platform 1.16

* RC4 disabled

  We disabled all RC4 ciphers in both HttpServer and JettyHttpClient.

* Launcher

  The launcher jar now shades its jnr-posix and asm dependencies.

* Maven plugin upgrades
  - maven-assembly-plugin to 2.5.3

Platform 1.15

* Jetty security vulnerability fix

  Platform versions 1.07 through 1.14 have a critical information bleed
  vulnerability in the Jetty server.

* RelativeUriBuilder

  We created RelativeUriBuilder for building the relative URIs needed by
  BalancingHttpClient.

* Bootstrap

  We created Bootstrap.bootstrapApplication(Class<T>, Function<T, String>)
  for setting the application name based on configuration.

* We reimplemented SmileBodyGenerator to be a StaticBodyGenerator.

* Library Upgrades

  - Jetty to 9.2.9

Platform 1.14

* JAX-RS
